--- a/style.css
+++ b/style.css
@@ -12,20 +12,29 @@ body {
 
 
 }
-.container {
-display:flex;
-flex-direction: column;
- align-items: center;
 
-width: 100%;%;
+a
+{
+	text-decoration:none;
+  color: black;
+}
+
+
+.container {
+ display:flex;
+ flex-direction: column;
+ text-align: center;
+ color: black;
+ width: 100%;
+ align-items: center;
 
 }
 
 .nav {
   width: 100%;
   height: 3%;
-  color: #fff;
-  background-color: #7a7a7a;
+  color: black;
+  background-color: #fff;
 
 
 }
@@ -40,16 +49,13 @@ width: 100%;%;
 .nom {
   width: 100%; ;
   height: 320px;
-  color: #fff;
+  color: black;
   text-align: center;
   font-size: 18px;
   padding-top: 5%;
 
 }
-.nom h1 {
 
-color: red;
-}
 .nom h2 {
   margin: 0;
   padding: 0;
@@ -59,46 +65,111 @@ color: red;
  padding-top: 8%
 }
 .moi {
-  width: 100%;
+  width: 90%;
   height: 300px;
-  background-color:  #e8e8e8;
+  background-color: rgb(192, 195, 198);
   display: flex;
   flex-direction: column;
-  align-items: center;
   text-align: center;
+  border-radius: 20px 20px;
 }
 .parcours {
-  width: 100%;;
-  color: #7a7a7a;
+  
+   border-radius: 0 0 20px 20px ;
   background-color: #fff;
   text-align: center;
   height: 300px;
 
+}
 
-
+.texte {
+  text-align: left;
+  width: 40%;
+  margin-left: 40%;
 }
 
 .projet{
-  height: 200px;
-  background-color: red;
+  height: 400px;
   width: 100%;
+margin-right: 6%;
+}
+
+.projet img {
+   margin-left: 5%;
+}
+.donuts {
+  width: 20%;
+  height: 60%;
+}
+
+.integration4 {
+  width: 16%;
+  height: 60%;
+}
+
+.integration5 {
+  width: 16%;
+  height: 60%;
 
 }
 
 .competence{
- height: 200px;
-  background-color: blue;
+  display: flex;
+  flex-direction: column;
+  height: 360px;
   width: 100%;
   text-align: center;
 }
 
+.ligne1{
+margin-left: 6%;
+}
+
+.ligne2 {
+  margin-left: 6%;
+}
+
 .ligne1 img {
-  height: 10%;
-  width: 10%;
+  height: 75%;
+  width: 7%;
+  margin: 2% 6% 0 0;
+}
+
+.ligne2 img {
+   height: 75%;
+  width: 7%;
+  margin-right: 5%;
+  margin-top: 2%;
 }
 
 .contacts{
- height: 200px;
-  background-color: orange;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 200px;
+
   width: 100%;
+  t
+}
+.git {
+  width: 55%;
+}
+
+.git img{
+  height: 70%;
+  width: 57%;
+}
+
+.mail {
+
+}
+.mail h2 {
+  margin-top: 0;
+  margin-bottom: 1%;
+}
+
+.linkedin img{
+   height: 50%;
+  width: 17%;
+
 }
